solved mobile overflow problem

--- a/css/queries.css
+++ b/css/queries.css
@@ -229,6 +229,11 @@
 /**BELOW 35*16 = 560px (Phones)**/
 /************************/
 @media (max-width: 35em) {
+  /* Only necessary for mobile devices, because thes are ignoring overflow-x: hidden on body or html element */
+  .mobile-overflowX {
+    overflow-x: hidden;
+  }
+
   .grid {
     row-gap: 4.8rem;
   }
@@ -299,6 +304,11 @@
   .cta-image-box {
     height: 32rem;
     grid-row: 1;
+  }
+
+  .pricing-plan {
+    width: 85%;
+    justify-self: center;
   }
 }
 
