--- a/css/style.css
+++ b/css/style.css
@@ -382,7 +382,6 @@
 
 .pricing-plan {
   border-radius: 11px;
-
   width: 75%;
 }
 
@@ -397,6 +396,7 @@
   padding: 4.8rem;
   position: relative;
   overflow: hidden;
+  justify-self: start;
 }
 
 .pricing-plan--complete::after {
